--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.Activities.Fragments.DetailFragment"
-    android:background="@color/colorAccent">
+    tools:context=".Controllers.Fragments.DetailFragment"
+    android:background="#BED4D6">
 
     <TextView
         android:layout_width="match_parent"
