Created multiple buttons and passed button tags between activities.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:text="no details to show"
         android:textColor="@color/colorPrimary"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:id="@+id/detail_fragment_text_view"/>
 
 </FrameLayout>
